tests/AstroParser.py
# Generated from AstroParser.g4 by ANTLR 4.13.2
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class AstroParser ( Parser ):

    grammarFileName = "AstroParser.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'---'", "<INVALID>", "'<script'", "'<style'", 
                     "'<'", "'</'", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "'>'", "'/>'", "<INVALID>", "<INVALID>", "'Fragment'", 
                     "<INVALID>", "'set:html'", "'set:text'", "'is:raw'", 
                     "'class:list'", "'transition:animate'", "'transition:persist'", 
                     "'transition:name'", "'slot'", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "'='", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "'.'", "'...'", "'}'", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "'/*'", "<INVALID>", "'*/'", "<INVALID>", 
                     "'</script>'", "<INVALID>", "'</style>'" ]

    symbolicNames = [ "<INVALID>", "FRONTMATTER_OPEN", "HTML_COMMENT", "SCRIPT_OPEN", 
                      "STYLE_OPEN", "TAG_OPEN", "TAG_OPEN_CLOSE", "TEMPLATE_EXPR_OPEN", 
                      "RAW_TEXT_CONTENT", "TEXT", "WS", "FM_CLOSE", "FM_NEWLINE", 
                      "FM_TEXT", "TAG_CLOSE", "TAG_SELF_CLOSE", "TAG_WS", 
                      "CLIENT_DIRECTIVE", "FRAGMENT_TOKEN", "SERVER_DIRECTIVE", 
                      "SET_HTML", "SET_TEXT", "IS_RAW", "CLASS_LIST", "TRANSITION_ANIMATE", 
                      "TRANSITION_PERSIST", "TRANSITION_NAME", "SLOT_ATTR", 
                      "LOWER_IDENT", "UPPER_IDENT", "COLON_IDENT", "EQUALS", 
                      "ATTR_VALUE_DQ", "ATTR_VALUE_SQ", "TAG_EXPR_OPEN", 
                      "DOT", "SPREAD", "EXPR_CLOSE", "EXPR_OPEN", "EXPR_STRING_DQ", 
                      "EXPR_STRING_SQ", "EXPR_TEMPLATE", "EXPR_COMMENT_OPEN", 
                      "EXPR_TEXT", "EXPR_COMMENT_CLOSE", "EXPR_COMMENT_TEXT", 
                      "SCRIPT_CLOSE", "SCRIPT_CONTENT", "STYLE_CLOSE", "STYLE_CONTENT" ]

    RULE_astroFile = 0
    RULE_frontmatter = 1
    RULE_fmLine = 2
    RULE_template = 3
    RULE_templateItem = 4
    RULE_text = 5
    RULE_htmlElement = 6
    RULE_htmlOpenTag = 7
    RULE_htmlVoidTag = 8
    RULE_htmlCloseTag = 9
    RULE_htmlTagName = 10
    RULE_componentElement = 11
    RULE_componentOpenTag = 12
    RULE_componentSelfCloseTag = 13
    RULE_componentCloseTag = 14
    RULE_componentTagName = 15
    RULE_fragmentElement = 16
    RULE_fragmentOpenTag = 17
    RULE_fragmentSelfCloseTag = 18
    RULE_fragmentCloseTag = 19
    RULE_styleBlock = 20
    RULE_scriptBlock = 21
    RULE_rawTextBlock = 22
    RULE_rawTagName = 23
    RULE_attribute = 24
    RULE_normalAttr = 25
    RULE_exprAttr = 26
    RULE_booleanAttr = 27
    RULE_spreadAttr = 28
    RULE_astroDirectiveAttr = 29
    RULE_attrName = 30
    RULE_attrValue = 31
    RULE_directiveName = 32
    RULE_templateExpr = 33
    RULE_exprBody = 34
    RULE_exprChunk = 35
    RULE_nestedExpr = 36
    RULE_exprComment = 37

    ruleNames =  [ "astroFile", "frontmatter", "fmLine", "template", "templateItem", 
                   "text", "htmlElement", "htmlOpenTag", "htmlVoidTag", 
                   "htmlCloseTag", "htmlTagName", "componentElement", "componentOpenTag", 
                   "componentSelfCloseTag", "componentCloseTag", "componentTagName", 
                   "fragmentElement", "fragmentOpenTag", "fragmentSelfCloseTag", 
                   "fragmentCloseTag", "styleBlock", "scriptBlock", "rawTextBlock", 
                   "rawTagName", "attribute", "normalAttr", "exprAttr", 
                   "booleanAttr", "spreadAttr", "astroDirectiveAttr", "attrName", 
                   "attrValue", "directiveName", "templateExpr", "exprBody", 
                   "exprChunk", "nestedExpr", "exprComment" ]

    EOF = Token.EOF
    FRONTMATTER_OPEN=1
    HTML_COMMENT=2
    SCRIPT_OPEN=3
    STYLE_OPEN=4
    TAG_OPEN=5
    TAG_OPEN_CLOSE=6
    TEMPLATE_EXPR_OPEN=7
    RAW_TEXT_CONTENT=8
    TEXT=9
    WS=10
    FM_CLOSE=11
    FM_NEWLINE=12
    FM_TEXT=13
    TAG_CLOSE=14
    TAG_SELF_CLOSE=15
    TAG_WS=16
    CLIENT_DIRECTIVE=17
    FRAGMENT_TOKEN=18
    SERVER_DIRECTIVE=19
    SET_HTML=20
    SET_TEXT=21
    IS_RAW=22
    CLASS_LIST=23
    TRANSITION_ANIMATE=24
    TRANSITION_PERSIST=25
    TRANSITION_NAME=26
    SLOT_ATTR=27
    LOWER_IDENT=28
    UPPER_IDENT=29
    COLON_IDENT=30
    EQUALS=31
    ATTR_VALUE_DQ=32
    ATTR_VALUE_SQ=33
    TAG_EXPR_OPEN=34
    DOT=35
    SPREAD=36
    EXPR_CLOSE=37
    EXPR_OPEN=38
    EXPR_STRING_DQ=39
    EXPR_STRING_SQ=40
    EXPR_TEMPLATE=41
    EXPR_COMMENT_OPEN=42
    EXPR_TEXT=43
    EXPR_COMMENT_CLOSE=44
    EXPR_COMMENT_TEXT=45
    SCRIPT_CLOSE=46
    SCRIPT_CONTENT=47
    STYLE_CLOSE=48
    STYLE_CONTENT=49

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.13.2")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class AstroFileContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def template(self):
            return self.getTypedRuleContext(AstroParser.TemplateContext,0)


        def EOF(self):
            return self.getToken(AstroParser.EOF, 0)

        def frontmatter(self):
            return self.getTypedRuleContext(AstroParser.FrontmatterContext,0)


        def getRuleIndex(self):
            return AstroParser.RULE_astroFile

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterAstroFile" ):
                listener.enterAstroFile(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitAstroFile" ):
                listener.exitAstroFile(self)




    def astroFile(self):

        localctx = AstroParser.AstroFileContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_astroFile)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 77
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==1:
                self.state = 76
                self.frontmatter()


            self.state = 79
            self.template()
            self.state = 80
            self.match(AstroParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class FrontmatterContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def FRONTMATTER_OPEN(self):
            return self.getToken(AstroParser.FRONTMATTER_OPEN, 0)

        def FM_CLOSE(self):
            return self.getToken(AstroParser.FM_CLOSE, 0)

        def fmLine(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(AstroParser.FmLineContext)
            else:
                return self.getTypedRuleContext(AstroParser.FmLineContext,i)


        def getRuleIndex(self):
            return AstroParser.RULE_frontmatter

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterFrontmatter" ):
                listener.enterFrontmatter(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitFrontmatter" ):
                listener.exitFrontmatter(self)




    def frontmatter(self):

        localctx = AstroParser.FrontmatterContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_frontmatter)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 82
            self.match(AstroParser.FRONTMATTER_OPEN)
            self.state = 86
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==13:
                self.state = 83
                self.fmLine()
                self.state = 88
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 89
            self.match(AstroParser.FM_CLOSE)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class FmLineContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def FM_TEXT(self, i:int=None):
            if i is None:
                return self.getTokens(AstroParser.FM_TEXT)
            else:
                return self.getToken(AstroParser.FM_TEXT, i)

        def getRuleIndex(self):
            return AstroParser.RULE_fmLine

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterFmLine" ):
                listener.enterFmLine(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitFmLine" ):
                listener.exitFmLine(self)




    def fmLine(self):

        localctx = AstroParser.FmLineContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_fmLine)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 92 
            self._errHandler.sync(self)
            _alt = 1
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt == 1:
                    self.state = 91
                    self.match(AstroParser.FM_TEXT)

                else:
                    raise NoViableAltException(self)
                self.state = 94 
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,2,self._ctx)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class TemplateContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def templateItem(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(AstroParser.TemplateItemContext)
            else:
                return self.getTypedRuleContext(AstroParser.TemplateItemContext,i)


        def getRuleIndex(self):
            return AstroParser.RULE_template

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterTemplate" ):
                listener.enterTemplate(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitTemplate" ):
                listener.exitTemplate(self)




    def template(self):

        localctx = AstroParser.TemplateContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_template)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 99
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & 696) != 0):
                self.state = 96
                self.templateItem()
                self.state = 101
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class TemplateItemContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def htmlElement(self):
            return self.getTypedRuleContext(AstroParser.HtmlElementContext,0)


        def componentElement(self):
            return self.getTypedRuleContext(AstroParser.ComponentElementContext,0)


        def fragmentElement(self):
            return self.getTypedRuleContext(AstroParser.FragmentElementContext,0)


        def styleBlock(self):
            return self.getTypedRuleContext(AstroParser.StyleBlockContext,0)


        def scriptBlock(self):
            return self.getTypedRuleContext(AstroParser.ScriptBlockContext,0)


        def rawTextBlock(self):
            return self.getTypedRuleContext(AstroParser.RawTextBlockContext,0)


        def templateExpr(self):
            return self.getTypedRuleContext(AstroParser.TemplateExprContext,0)


        def text(self):
            return self.getTypedRuleContext(AstroParser.TextContext,0)


        def getRuleIndex(self):
            return AstroParser.RULE_templateItem

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterTemplateItem" ):
                listener.enterTemplateItem(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitTemplateItem" ):
                listener.exitTemplateItem(self)




    def templateItem(self):

        localctx = AstroParser.TemplateItemContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_templateItem)
        try:
            self.state = 110
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,4,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 102
                self.htmlElement()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 103
                self.componentElement()
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 104
                self.fragmentElement()
                pass

            elif la_ == 4:
                self.enterOuterAlt(localctx, 4)
                self.state = 105
                self.styleBlock()
                pass

            elif la_ == 5:
                self.enterOuterAlt(localctx, 5)
                self.state = 106
                self.scriptBlock()
                pass

            elif la_ == 6:
                self.enterOuterAlt(localctx, 6)
                self.state = 107
                self.rawTextBlock()
                pass

            elif la_ == 7:
                self.enterOuterAlt(localctx, 7)
                self.state = 108
                self.templateExpr()
                pass

            elif la_ == 8:
                self.enterOuterAlt(localctx, 8)
                self.state = 109
                self.text()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class TextContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def TEXT(self, i:int=None):
            if i is None:
                return self.getTokens(AstroParser.TEXT)
            else:
                return self.getToken(AstroParser.TEXT, i)

        def getRuleIndex(self):
            return AstroParser.RULE_text

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterText" ):
                listener.enterText(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitText" ):
                listener.exitText(self)




    def text(self):

        localctx = AstroParser.TextContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_text)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 113 
            self._errHandler.sync(self)
            _alt = 1
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt == 1:
                    self.state = 112
                    self.match(AstroParser.TEXT)

                else:
                    raise NoViableAltException(self)
                self.state = 115 
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,5,self._ctx)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class HtmlElementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def htmlOpenTag(self):
            return self.getTypedRuleContext(AstroParser.HtmlOpenTagContext,0)


        def template(self):
            return self.getTypedRuleContext(AstroParser.TemplateContext,0)


        def htmlCloseTag(self):
            return self.getTypedRuleContext(AstroParser.HtmlCloseTagContext,0)


        def htmlVoidTag(self):
            return self.getTypedRuleContext(AstroParser.HtmlVoidTagContext,0)


        def getRuleIndex(self):
            return AstroParser.RULE_htmlElement

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterHtmlElement" ):
                listener.enterHtmlElement(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitHtmlElement" ):
                listener.exitHtmlElement(self)




    def htmlElement(self):

        localctx = AstroParser.HtmlElementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_htmlElement)
        try:
            self.state = 122
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,6,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 117
                self.htmlOpenTag()
                self.state = 118
                self.template()
                self.state = 119
                self.htmlCloseTag()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 121
                self.htmlVoidTag()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class HtmlOpenTagContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def TAG_OPEN(self):
            return self.getToken(AstroParser.TAG_OPEN, 0)

        def htmlTagName(self):
            return self.getTypedRuleContext(AstroParser.HtmlTagNameContext,0)


        def TAG_CLOSE(self):
            return self.getToken(AstroParser.TAG_CLOSE, 0)

        def attribute(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(AstroParser.AttributeContext)
            else:
                return self.getTypedRuleContext(AstroParser.AttributeContext,i)


        def getRuleIndex(self):
            return AstroParser.RULE_htmlOpenTag

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterHtmlOpenTag" ):
                listener.enterHtmlOpenTag(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitHtmlOpenTag" ):
                listener.exitHtmlOpenTag(self)




    def htmlOpenTag(self):

        localctx = AstroParser.HtmlOpenTagContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_htmlOpenTag)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 124
            self.match(AstroParser.TAG_OPEN)
            self.state = 125
            self.htmlTagName()
            self.state = 129
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & 19326959616) != 0):
                self.state = 126
                self.attribute()
                self.state = 131
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 132
            self.match(AstroParser.TAG_CLOSE)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class HtmlVoidTagContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def TAG_OPEN(self):
            return self.getToken(AstroParser.TAG_OPEN, 0)

        def htmlTagName(self):
            return self.getTypedRuleContext(AstroParser.HtmlTagNameContext,0)


        def TAG_SELF_CLOSE(self):
            return self.getToken(AstroParser.TAG_SELF_CLOSE, 0)

        def attribute(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(AstroParser.AttributeContext)
            else:
                return self.getTypedRuleContext(AstroParser.AttributeContext,i)


        def getRuleIndex(self):
            return AstroParser.RULE_htmlVoidTag

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterHtmlVoidTag" ):
                listener.enterHtmlVoidTag(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitHtmlVoidTag" ):
                listener.exitHtmlVoidTag(self)




    def htmlVoidTag(self):

        localctx = AstroParser.HtmlVoidTagContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_htmlVoidTag)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 134
            self.match(AstroParser.TAG_OPEN)
            self.state = 135
            self.htmlTagName()
            self.state = 139
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & 19326959616) != 0):
                self.state = 136
                self.attribute()
                self.state = 141
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 142
            self.match(AstroParser.TAG_SELF_CLOSE)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class HtmlCloseTagContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def TAG_OPEN_CLOSE(self):
            return self.getToken(AstroParser.TAG_OPEN_CLOSE, 0)

        def htmlTagName(self):
            return self.getTypedRuleContext(AstroParser.HtmlTagNameContext,0)


        def TAG_CLOSE(self):
            return self.getToken(AstroParser.TAG_CLOSE, 0)

        def getRuleIndex(self):
            return AstroParser.RULE_htmlCloseTag

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterHtmlCloseTag" ):
                listener.enterHtmlCloseTag(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitHtmlCloseTag" ):
                listener.exitHtmlCloseTag(self)




    def htmlCloseTag(self):

        localctx = AstroParser.HtmlCloseTagContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_htmlCloseTag)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 144
            self.match(AstroParser.TAG_OPEN_CLOSE)
            self.state = 145
            self.htmlTagName()
            self.state = 146
            self.match(AstroParser.TAG_CLOSE)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class HtmlTagNameContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def LOWER_IDENT(self):
            return self.getToken(AstroParser.LOWER_IDENT, 0)

        def getRuleIndex(self):
            return AstroParser.RULE_htmlTagName

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterHtmlTagName" ):
                listener.enterHtmlTagName(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitHtmlTagName" ):
                listener.exitHtmlTagName(self)




    def htmlTagName(self):

        localctx = AstroParser.HtmlTagNameContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_htmlTagName)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 148
            self.match(AstroParser.LOWER_IDENT)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ComponentElementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def componentOpenTag(self):
            return self.getTypedRuleContext(AstroParser.ComponentOpenTagContext,0)


        def template(self):
            return self.getTypedRuleContext(AstroParser.TemplateContext,0)


        def componentCloseTag(self):
            return self.getTypedRuleContext(AstroParser.ComponentCloseTagContext,0)


        def componentSelfCloseTag(self):
            return self.getTypedRuleContext(AstroParser.ComponentSelfCloseTagContext,0)


        def getRuleIndex(self):
            return AstroParser.RULE_componentElement

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterComponentElement" ):
                listener.enterComponentElement(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitComponentElement" ):
                listener.exitComponentElement(self)




    def componentElement(self):

        localctx = AstroParser.ComponentElementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 22, self.RULE_componentElement)
        try:
            self.state = 155
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,9,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 150
                self.componentOpenTag()
                self.state = 151
                self.template()
                self.state = 152
                self.componentCloseTag()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 154
                self.componentSelfCloseTag()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ComponentOpenTagContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def TAG_OPEN(self):
            return self.getToken(AstroParser.TAG_OPEN, 0)

        def componentTagName(self):
            return self.getTypedRuleContext(AstroParser.ComponentTagNameContext,0)


        def TAG_CLOSE(self):
            return self.getToken(AstroParser.TAG_CLOSE, 0)

        def attribute(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(AstroParser.AttributeContext)
            else:
                return self.getTypedRuleContext(AstroParser.AttributeContext,i)


        def getRuleIndex(self):
            return AstroParser.RULE_componentOpenTag

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterComponentOpenTag" ):
                listener.enterComponentOpenTag(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitComponentOpenTag" ):
                listener.exitComponentOpenTag(self)




    def componentOpenTag(self):
